RDFStoreTest/SparqlParseRun/obj/Debug/TtlGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\Admin\Source\Repos\PolarDemo\SparqlParseRun\TtlGrammar.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace SparqlParseRun {

	using System;
	using System.Linq;
	using SparqlParseRun.RdfCommon;
	using SparqlParseRun.RdfCommon.Literals;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class TtlGrammarParser : Parser {
	public const int
		T__14=1, T__13=2, T__12=3, T__11=4, T__10=5, T__9=6, T__8=7, T__7=8, T__6=9, 
		T__5=10, T__4=11, T__3=12, T__2=13, T__1=14, T__0=15, IRIREF=16, PNAME_NS=17, 
		PNAME_LN=18, BLANK_NODE_LABEL=19, LANGTAG=20, INTEGER=21, DECIMAL=22, 
		DOUBLE=23, EXPONENT=24, STRING_LITERAL_QUOTE=25, STRING_LITERAL_SINGLE_QUOTE=26, 
		STRING_LITERAL_LONG_SINGLE_QUOTE=27, STRING_LITERAL_LONG_QUOTE=28, UCHAR=29, 
		ECHAR=30, WS=31, ANON=32, PN_CHARS_BASE=33, PN_CHARS_U=34, PN_CHARS=35, 
		PN_PREFIX=36, PN_LOCAL=37, PLX=38, PERCENT=39, HEX=40, PN_LOCAL_ESC=41, 
		LineComment=42;
	public static readonly string[] tokenNames = {
		"<INVALID>", "']'", "'PREFIX'", "'a'", "')'", "'.'", "','", "'['", "'('", 
		"'false'", "'@base'", "';'", "'BASE'", "'@prefix'", "'true'", "'^^'", 
		"IRIREF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", "LANGTAG", "INTEGER", 
		"DECIMAL", "DOUBLE", "EXPONENT", "STRING_LITERAL_QUOTE", "STRING_LITERAL_SINGLE_QUOTE", 
		"STRING_LITERAL_LONG_SINGLE_QUOTE", "STRING_LITERAL_LONG_QUOTE", "UCHAR", 
		"ECHAR", "WS", "ANON", "PN_CHARS_BASE", "PN_CHARS_U", "PN_CHARS", "PN_PREFIX", 
		"PN_LOCAL", "PLX", "PERCENT", "HEX", "PN_LOCAL_ESC", "LineComment"
	};
	public const int
		RULE_turtleDoc = 0, RULE_statement = 1, RULE_directive = 2, RULE_prefixID = 3, 
		RULE_base = 4, RULE_sparqlBase = 5, RULE_sparqlPrefix = 6, RULE_triples = 7, 
		RULE_predicateObjectList = 8, RULE_objectList = 9, RULE_subject = 10, 
		RULE_predicate = 11, RULE_object = 12, RULE_literal = 13, RULE_blankNodePropertyList = 14, 
		RULE_collection = 15, RULE_numericLiteral = 16, RULE_rDFLiteral = 17, 
		RULE_booleanLiteral = 18, RULE_boolean = 19, RULE_string = 20, RULE_iri = 21, 
		RULE_iriString = 22, RULE_blankNode = 23;
	public static readonly string[] ruleNames = {
		"turtleDoc", "statement", "directive", "prefixID", "base", "sparqlBase", 
		"sparqlPrefix", "triples", "predicateObjectList", "objectList", "subject", 
		"predicate", "object", "literal", "blankNodePropertyList", "collection", 
		"numericLiteral", "rDFLiteral", "booleanLiteral", "boolean", "string", 
		"iri", "iriString", "blankNode"
	};

	public override string GrammarFileName { get { return "TtlGrammar.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


	public IGraph q;
	        private readonly Prologue prologue = new Prologue();

	public TtlGrammarParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class TurtleDocContext : ParserRuleContext {
		public IGraph inputStore;
		public IReadOnlyList<StatementContext> statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public TurtleDocContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public TurtleDocContext(ParserRuleContext parent, int invokingState, IGraph inputStore)
			: base(parent, invokingState)
		{
			this.inputStore = inputStore;
		}
		public override int RuleIndex { get { return RULE_turtleDoc; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterTurtleDoc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitTurtleDoc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTurtleDoc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TurtleDocContext turtleDoc(IGraph inputStore) {
		TurtleDocContext _localctx = new TurtleDocContext(_ctx, State, inputStore);
		EnterRule(_localctx, 0, RULE_turtleDoc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			q=_localctx.inputStore; 
			State = 52;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__8) | (1L << T__7) | (1L << T__5) | (1L << T__3) | (1L << T__2) | (1L << IRIREF) | (1L << PNAME_NS) | (1L << PNAME_LN) | (1L << BLANK_NODE_LABEL) | (1L << ANON))) != 0)) {
				{
				{
				State = 49; statement();
				}
				}
				State = 54;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public TriplesContext triples() {
			return GetRuleContext<TriplesContext>(0);
		}
		public DirectiveContext directive() {
			return GetRuleContext<DirectiveContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 59;
			switch (_input.La(1)) {
			case T__13:
			case T__5:
			case T__3:
			case T__2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 55; directive();
				}
				break;
			case T__8:
			case T__7:
			case IRIREF:
			case PNAME_NS:
			case PNAME_LN:
			case BLANK_NODE_LABEL:
			case ANON:
				EnterOuterAlt(_localctx, 2);
				{
				State = 56; triples();
				State = 57; Match(T__10);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectiveContext : ParserRuleContext {
		public SparqlBaseContext sparqlBase() {
			return GetRuleContext<SparqlBaseContext>(0);
		}
		public SparqlPrefixContext sparqlPrefix() {
			return GetRuleContext<SparqlPrefixContext>(0);
		}
		public BaseContext @base() {
			return GetRuleContext<BaseContext>(0);
		}
		public PrefixIDContext prefixID() {
			return GetRuleContext<PrefixIDContext>(0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directive; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectiveContext directive() {
		DirectiveContext _localctx = new DirectiveContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_directive);
		try {
			State = 65;
			switch (_input.La(1)) {
			case T__2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 61; prefixID();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62; @base();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 3);
				{
				State = 63; sparqlPrefix();
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 4);
				{
				State = 64; sparqlBase();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrefixIDContext : ParserRuleContext {
		public IToken _PNAME_NS;
		public IToken _IRIREF;
		public ITerminalNode PNAME_NS() { return GetToken(TtlGrammarParser.PNAME_NS, 0); }
		public ITerminalNode IRIREF() { return GetToken(TtlGrammarParser.IRIREF, 0); }
		public PrefixIDContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prefixID; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterPrefixID(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitPrefixID(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrefixID(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrefixIDContext prefixID() {
		PrefixIDContext _localctx = new PrefixIDContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_prefixID);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67; Match(T__2);
			State = 68; _localctx._PNAME_NS = Match(PNAME_NS);
			State = 69; _localctx._IRIREF = Match(IRIREF);
			State = 70; Match(T__10);
			 prologue.AddPrefix((_localctx._PNAME_NS!=null?_localctx._PNAME_NS.Text:null), (_localctx._IRIREF!=null?_localctx._IRIREF.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseContext : ParserRuleContext {
		public IToken _IRIREF;
		public ITerminalNode IRIREF() { return GetToken(TtlGrammarParser.IRIREF, 0); }
		public BaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_base; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterBase(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitBase(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BaseContext @base() {
		BaseContext _localctx = new BaseContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_base);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73; Match(T__5);
			State = 74; _localctx._IRIREF = Match(IRIREF);
			prologue.SetBase((_localctx._IRIREF!=null?_localctx._IRIREF.Text:null));
			State = 76; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SparqlBaseContext : ParserRuleContext {
		public IToken _IRIREF;
		public ITerminalNode IRIREF() { return GetToken(TtlGrammarParser.IRIREF, 0); }
		public SparqlBaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sparqlBase; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterSparqlBase(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitSparqlBase(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSparqlBase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SparqlBaseContext sparqlBase() {
		SparqlBaseContext _localctx = new SparqlBaseContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_sparqlBase);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; Match(T__3);
			State = 79; _localctx._IRIREF = Match(IRIREF);
			prologue.SetBase((_localctx._IRIREF!=null?_localctx._IRIREF.Text:null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SparqlPrefixContext : ParserRuleContext {
		public IToken _PNAME_NS;
		public IToken _IRIREF;
		public ITerminalNode PNAME_NS() { return GetToken(TtlGrammarParser.PNAME_NS, 0); }
		public ITerminalNode IRIREF() { return GetToken(TtlGrammarParser.IRIREF, 0); }
		public SparqlPrefixContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sparqlPrefix; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterSparqlPrefix(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitSparqlPrefix(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSparqlPrefix(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SparqlPrefixContext sparqlPrefix() {
		SparqlPrefixContext _localctx = new SparqlPrefixContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_sparqlPrefix);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; Match(T__13);
			State = 83; _localctx._PNAME_NS = Match(PNAME_NS);
			State = 84; _localctx._IRIREF = Match(IRIREF);
			 prologue.AddPrefix((_localctx._PNAME_NS!=null?_localctx._PNAME_NS.Text:null), (_localctx._IRIREF!=null?_localctx._IRIREF.Text:null)); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TriplesContext : ParserRuleContext {
		public SubjectContext _subject;
		public BlankNodePropertyListContext _blankNodePropertyList;
		public BlankNodePropertyListContext blankNodePropertyList() {
			return GetRuleContext<BlankNodePropertyListContext>(0);
		}
		public PredicateObjectListContext predicateObjectList() {
			return GetRuleContext<PredicateObjectListContext>(0);
		}
		public SubjectContext subject() {
			return GetRuleContext<SubjectContext>(0);
		}
		public TriplesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_triples; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterTriples(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitTriples(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTriples(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TriplesContext triples() {
		TriplesContext _localctx = new TriplesContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_triples);
		int _la;
		try {
			State = 94;
			switch (_input.La(1)) {
			case T__7:
			case IRIREF:
			case PNAME_NS:
			case PNAME_LN:
			case BLANK_NODE_LABEL:
			case ANON:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; _localctx._subject = subject();
				State = 88; predicateObjectList(_localctx._subject.value);
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90; _localctx._blankNodePropertyList = blankNodePropertyList();
				State = 92;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << IRIREF) | (1L << PNAME_NS) | (1L << PNAME_LN))) != 0)) {
					{
					State = 91; predicateObjectList(_localctx._blankNodePropertyList.value );
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateObjectListContext : ParserRuleContext {
		public ISubjectNode subj;
		public PredicateContext _predicate;
		public PredicateContext predicate(int i) {
			return GetRuleContext<PredicateContext>(i);
		}
		public ObjectListContext objectList(int i) {
			return GetRuleContext<ObjectListContext>(i);
		}
		public IReadOnlyList<PredicateContext> predicate() {
			return GetRuleContexts<PredicateContext>();
		}
		public IReadOnlyList<ObjectListContext> objectList() {
			return GetRuleContexts<ObjectListContext>();
		}
		public PredicateObjectListContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
		public PredicateObjectListContext(ParserRuleContext parent, int invokingState, ISubjectNode subj)
			: base(parent, invokingState)
		{
			this.subj = subj;
		}
		public override int RuleIndex { get { return RULE_predicateObjectList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.EnterPredicateObjectList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITtlGrammarListener typedListener = listener as ITtlGrammarListener;
			if (typedListener != null) typedListener.ExitPredicateObjectList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITtlGrammarVisitor<TResult> typedVisitor = visitor as ITtlGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicateObjectList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PredicateObjectListContext predicateObjectList(ISubjectNode subj) {
		PredicateObjectListContext _localctx = new PredicateObjectListContext(_ctx, State, subj);
		EnterRule(_localctx, 16, RULE_predicateObjectList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 96; _localctx._predicate = predicate();
			State = 97; objectList(_localctx.subj, _localctx._predicate.value);
			State = 106;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__4) {
				{
				{
				State = 98; Match(T__4);
				State = 102;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << IRIREF) | (1L << PNAME_NS) | (1L << PNAME_LN))) != 0)) {
					{
					State = 99; _localctx._predicate = predicate();
					State = 100; objectList(_localctx.subj, _localctx._predicate.value);
					}
				}

				}
				}
				State = 108;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
